# agentix

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  langgraph.json  pyproject.toml
frontend/: .env.example  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/api/[..._path]/: route.ts
frontend/components/: MyAssistant.tsx  assistant.tsx
frontend/components/assistant-ui/: SearchToolUI.tsx  thread.tsx
src/: auth.py
src/agentix/: __init__.py  configuration.py  graph.py  prompts.py  tools.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
