[project]
name = "agentix"
version = "0.0.1"
description = "Agentix Systems - AI-powered solutions"
authors = [
    { name = "Irad Aharoni", email = "irad.aharoni@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.2.14",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-tavily>=0.1",
]


[tool.uv]
dev-dependencies = [
    "mypy>=1.11.1", 
    "ruff>=0.6.1",
    "langgraph-cli[inmem]>=0.1.71",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
